wolan-logging/harvester/promtail-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: wolan
  name: ds-promtail
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: wolan
      containers:
        - name: promtail-container
          image: grafana/promtail
          args:
            - -config.file=/etc/promtail/promtail-config.yaml
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
#            - name: varlog
#              mountPath: /var/log
#              readOnly: true
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: varlog
          hostPath:
            path: /var/log
