wolan-logging/harvester/pod_grafana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-grafana
  labels:
    app: pod-grafana
spec:
  containers:
    - name: main
      image: grafana/grafana
      ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-grafana
spec:
  type: ClusterIP
  selector:
    app: pod-grafana
  ports:
    - port: 3000
      targetPort: 3000
