wolan-logging/harvester/pod_loki.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-loki
  labels:
    app: pod-loki
spec:
  containers:
    - name: main
      image: grafana/loki
      ports:
        - name: http
          containerPort: 3100
        - name: grpc
          containerPort: 9095
---
apiVersion: v1
kind: Service
metadata:
  name: svc-loki
spec:
  type: ClusterIP
  selector:
    app: pod-loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
    - name: grpc
      port: 9095
      targetPort: 9095
